# weather_app

./: .gitignore  README.md  config_deploy.py  pyproject.toml
ansible/: weather_app_pipeline.yml
automator/: WeatherApp.py  __init__.py
weatherapp/: WeatherApp.py  __init__.py  cleanup.sh
